--- a/src/Views/NewDesignGames/gamesdesigncard.scss
+++ b/src/Views/NewDesignGames/gamesdesigncard.scss
@@ -100,146 +100,41 @@
       width: 100%;
       justify-content: center;
 
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+      
       gap: 10px;
       row-gap: 20px;
-
-
       animation: slideUp 0.5s ease-in-out forwards;
-      // height: 492px;
-      // overflow: hidden;
 
-      @include mobile {
-        padding: 0 0px;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 5px;
-        row-gap: 8px;
+
+      grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+      grid-template-columns: repeat(9, 1fr);
+
+      @media (max-width: 1750px) {
+        grid-template-columns: repeat(8, 1fr);
       }
-//       #sdjfksdjlkc2023 {
-//         position: relative;
-//         &:hover {
-//           // box-shadow: rgba(255, 255, 255, 0.2) 0px 7px 29px 0px;
-//         }
-//         .play_button {
-//           position: absolute;
-//           width: 50px;
-//           height: 50px;
-//           border-radius: 250px;
-//           top: 50%;
-//           left: 50%;
-//           transform: translate(-50%, -50%);
-//           border: none;
-//           cursor: pointer;
-//           z-index: 9;
-//           background: $primary;
-//           display: none;
-//           // margin-top: -30px;
-//           &:hover {
-//             background: $LowopactiyPrimary02;
-//           }
-//         }
-//         .play_button svg {
-//           fill: $background_black;
-//           width: 30px;
-//           height: 30px;
-//         }
-
-//         .staff_image_holder {
-//           border-radius: 10px;
-//           display: flex;
-//           flex-direction: column;
-//           gap: 5px;
-          
-//         // background: $background_black;
-//         background: $primary;
-// //         background: #200122;  /* fallback for old browsers */
-// // background: -webkit-linear-gradient(to right, #6f0000, #200122);  /* Chrome 10-25, Safari 5.1-6 */
-// // background: linear-gradient(to right, #6f0000, #200122); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-          
-//         .spanofc15s265wimg  {
-//             // background: linear-gradient(180deg, transparent, #0a1a33);
-//             // height: 205px !important;
-//             // overflow: hidden;
-//           position: relative;
-
-//             &::after {
-//               content: "";
-//               display: block;
-//               position: absolute;
-//               height: 100%;
-//               width: 100%;
-//               left: 0;
-//               top: 0;
-//               background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 40%, rgba(16, 23, 39, 1.0) 100%);
-//             }
-//             .c15s265wimg {
-//               border-radius: 10px 10px 0 0;
-//               width: 100%;
-//               transition: 0.3s all;
-//               cursor: pointer;
-//               object-fit: cover;
-//               object-position: top;
-//               position: relative;
-//               height: 220px;
+      @media (max-width: 1650px) {
+        grid-template-columns: repeat(7, 1fr);
+      }
+      @media (max-width: 1500px) {
+        grid-template-columns: repeat(6, 1fr);
+      }
+      @media (max-width: 1300px) {
+        grid-template-columns: repeat(5, 1fr);
+      }
+ 
+      @media (max-width: 1100px) {
+        grid-template-columns: repeat(4, 1fr);
+      }
+      @media (max-width: 900px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+      @media (max-width: 600px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
 
 
-//             }
 
 
-//             .abs15x5w6532sdf63sd {
-//               position: absolute;
-//               z-index: 10;
-//               height: 16px;
-//               right: 6px;
-//               top: 5px;
-//               filter: drop-shadow(0 0px 4px rgba(0, 0, 0, 1.4));
-//             }
-//           }
-
-       
-
-//           .dataofgamex {
-//             display: flex;
-//             flex-direction: column;
-//             gap: 5px;
-//             // padding: 0 5px 10px 8px;
-//             position: absolute;
-//             bottom: 10px;
-//             left: 10px;
-//             .scksw55x5s {
-//               font-size: 12px;
-//               z-index: 9 !important;
-//             }
-//             .scksw55x5s2 {
-//               font-size: 16px;
-//               text-transform: uppercase;
-//               font-weight: 700;
-//               z-index: 9 !important;
-//               color: $textprimary;
-//             }
-//           }
-//         }
-//         &:hover {
-//           &::after {
-//             content: " ";
-//             backdrop-filter: blur(2px);
-//             width: 100%;
-//             height: 100%;
-//             z-index: 2;
-//             background: rgba(48, 45, 39, 0.4);
-//             position: absolute;
-//             top: 0;
-//             left: 0;
-//             border-radius: 10px;
-//           }
-
-//           .play_button {
-//             display: unset !important;
-//           }
-//         }
-//       }
     }
   }
 
