--- a/src/Views/Home/home.scss
+++ b/src/Views/Home/home.scss
@@ -342,3 +342,145 @@ background: linear-gradient(to right, #42495c, $lightgray) !important; /* W3C, I
     height: 100%; /* You can also use a specific height value, e.g., 300px */
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+// extsx1 slider
+
+
+.x4w8s234454sc5 {
+  display: flex;
+  align-items: center;
+  gap: 10px;   
+}
+
+.sidebarxs4wider {
+  position: fixed;
+  top: 0;
+  left: -500px; // Start hidden to the left
+  width: 400px;
+  height: 100%;
+  background-color: $background_black;
+  // border-right: 1px solid $x3primary;
+  box-shadow: 0px 0 25px rgba(255, 255, 255, 0.25);
+  overflow-x: hidden;
+  transition: left 0.3s ease-in-out;
+  z-index: 99999;
+  // border-radius: 0 20px 20px 0;
+  height: 100vh;
+
+  &.openx56w4er5 {
+    left: 0; // Slide in from the left
+  }
+
+  .closesdf26tton {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 30px;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+
+  .contentx5we5we {
+    padding: 20px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-direction: column;
+    gap: 10px;
+    .logosectioncs4565w {
+      img {
+        width: 200px;
+      }
+    }
+
+    .x5w598s23r1sd5f2 {
+      display: flex;
+      gap: 15px;
+      padding: 20px 0;
+      .loginbuttonnavsxkk {
+          button {
+            border: none;
+            height: 35px;
+            padding: 10px 15px;
+            @include font(16px);
+            @include flex(center,center);
+            min-width: 100px;
+            font-size: 14px;
+            border-radius: 10px;
+            background: $x2primary;
+            color: $white;
+            cursor: pointer;
+            &:hover {
+              background: $x3primary;
+            }
+          }
+      }
+      
+      .signupbuttonnavsxkk {
+        button {
+          border: none;
+          height: 35px;
+          padding: 10px 15px;
+          @include font(16px);
+          @include flex(center,center);
+          min-width: 100px;
+          font-size: 14px;
+          border-radius: 10px;
+          background: $lightgray;
+          color: $white;
+          cursor: pointer;
+          &:hover {
+            background: $x3primary;
+            color: $white;
+          }
+        }
+      }
+    }
+  }
+}
+
+.sdf4s54w85wcon {
+  // font-size: 30px;
+  cursor: pointer;
+  // background: none;
+  // border: none;
+  // position: fixed;
+  // top: 20px;
+  // left: 20px;
+  // z-index: 1001;
+  background: $x1primary;
+  padding: 9px;
+  @include flex(center,center);
+  border-radius: 10px;
+
+  &:hover {
+    background: $x3primary;
+  }
+  img {
+    height: 22px;
+  }
+
+}
+
+.overlayx6574we5r7e {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  backdrop-filter: blur(8px);
+}
