--- a/src/Views/Auths/login.scss
+++ b/src/Views/Auths/login.scss
@@ -4,8 +4,10 @@
   display: flex;
   align-items: center;
   position: relative;
+  @include mobile {
+    justify-content: center;
+  }
   
-
   .sdc4s5df45s6dxse {
     text-align: center;
   }
