--- a/src/Views/GlobalStyles/Popup.scss
+++ b/src/Views/GlobalStyles/Popup.scss
@@ -54,6 +54,9 @@
     width: 100%;
     width: 80%;
     // padding: 0 50px;
+    @include mobile {
+      width: 100%;
+    }
     .insidecontentx4w {
       border-radius: 10px;
       background: $background_black;
@@ -69,6 +72,10 @@
       flex-direction: column;
       gap: 10px;
       max-width: 1150px;
+
+      @include mobile {
+        width: 100%;
+      }
     }
     .heading1x515w51 {
       position: absolute;
@@ -118,7 +125,9 @@
     align-items: center;
     gap: 20px;
     justify-content: space-between;
-
+@include mobile {
+  flex-direction: column;
+}
     .searchks45x45s {
       display: flex;
       align-items: center;
@@ -138,7 +147,11 @@
         background: $x3primary;
         border: 1px solid $x2primary;
         color: $wtext;
-        
+        @include mobile {
+          
+        width: 100%;
+        }
+
         &::placeholder {
           color: $wtext;
 
@@ -231,6 +244,11 @@
     justify-content: center;
     align-items: center;
     width: -webkit-fill-available;
+    
+    @include mobile {
+      grid-template-columns: repeat(2,1fr);
+
+    }
   }
 }
 
