--- a/src/main.scss
+++ b/src/main.scss
@@ -58,99 +58,111 @@ a {
 
 
 
-.x45wer4f5dsf {
-  display: flex;
-  position: fixed;
-  z-index: 99999;
-  bottom: 10px;
-  right: 00px;
-  @include mobile {
-    bottom: 210px;
-  }
-  .background {
-  background-color: rgb(52, 20, 235);
-  border-radius: 50%;
-  box-shadow: 0 2.1px 1.3px rgba(0, 0, 0, 0.044),
-  0 5.9px 4.2px rgba(0, 0, 0, 0.054), 0 12.6px 9.5px rgba(0, 0, 0, 0.061),
-  0 25px 20px rgba(0, 0, 0, 0.1);
-  height: 55px;
-  width: 55px;
-  left: 10px;
-  position: absolute;
-  top: 10px;
+// .x45wer4f5dsf {
+//   display: flex;
+//   position: fixed;
+//   z-index: 99999;
+//   bottom: 10px;
+//   right: 00px;
+//   @include mobile {
+//     bottom: 210px;
+//   }
+//   .background {
+//   background-color: rgb(52, 20, 235);
+//   border-radius: 50%;
+//   box-shadow: 0 2.1px 1.3px rgba(0, 0, 0, 0.044),
+//   0 5.9px 4.2px rgba(0, 0, 0, 0.054), 0 12.6px 9.5px rgba(0, 0, 0, 0.061),
+//   0 25px 20px rgba(0, 0, 0, 0.1);
+//   height: 55px;
+//   width: 55px;
+//   left: 10px;
+//   position: absolute;
+//   top: 10px;
 
-  }
+//   }
   
-  .chat-bubble {
-  cursor: pointer;
-  position: relative;
-  width: 75px;
-  height: 75px;
-  }
+//   .chat-bubble {
+//   cursor: pointer;
+//   position: relative;
+//   width: 75px;
+//   height: 75px;
+//   }
   
-  .bubble {
-  transform-origin: 50%;
-  transition: transform 500ms cubic-bezier(0.17, 0.61, 0.54, 0.9);
-  }
+//   .bubble {
+//   transform-origin: 50%;
+//   transition: transform 500ms cubic-bezier(0.17, 0.61, 0.54, 0.9);
+//   }
   
-  .line {
-  fill: none;
-  stroke: rgb(255, 255, 255);
-  stroke-width: 2.75;
-  stroke-linecap: round;
-  transition: stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+//   .line {
+//   fill: none;
+//   stroke: rgb(255, 255, 255);
+//   stroke-width: 2.75;
+//   stroke-linecap: round;
+//   transition: stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
   
-  .line1 {
-  stroke-dasharray: 60 90;
-  stroke-dashoffset: -20;
-  }
+//   .line1 {
+//   stroke-dasharray: 60 90;
+//   stroke-dashoffset: -20;
+//   }
   
-  .line2 {
-  stroke-dasharray: 67 87;
-  stroke-dashoffset: -18;
-  }
+//   .line2 {
+//   stroke-dasharray: 67 87;
+//   stroke-dashoffset: -18;
+//   }
   
-  .circle {
-  fill: rgb(255, 255, 255);
-  stroke: none;
-  transform-origin: 50%;
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+//   .circle {
+//   fill: rgb(255, 255, 255);
+//   stroke: none;
+//   transform-origin: 50%;
+//   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
   
-  .active .bubble {
-  transform: translateX(24px) translateY(4px) rotate(45deg);
-  }
+//   .active .bubble {
+//   transform: translateX(24px) translateY(4px) rotate(45deg);
+//   }
   
-  .active .line1 {
-  stroke-dashoffset: 21;
-  }
+//   .active .line1 {
+//   stroke-dashoffset: 21;
+//   }
   
-  .active .line2 {
-  stroke-dashoffset: 30;
-  }
+//   .active .line2 {
+//   stroke-dashoffset: 30;
+//   }
   
-  .active .circle {
-  transform: scale(0);
-  }
+//   .active .circle {
+//   transform: scale(0);
+//   }
 
 
 
 
-}
-
-
-
-
-
+// }
 
 
 
 
 
 
+// .tawk-max-container {
+//   border: none !important;
+// }
+// .tawk-min-container .tawk-button-circle.tawk-button-large {
+//   width: 40px !important;
+//   height: 40px !important;
+// }
 
 
+
+// .tawk-icon-right {
+//   display: none !important;
+// }
+
+// .tawk-bubble-container .tawk-icon-right {
+//   img {
+//     display: none !important;
+//   }
+// }
 
 
 
