--- a/src/Components/AccountNavtop/accountnavtop.scss
+++ b/src/Components/AccountNavtop/accountnavtop.scss
@@ -407,3 +407,90 @@
     background: linear-gradient(to right, rgba(127, 145, 158, 0.486), rgba(64, 83, 103, 0.521));
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// css of mobile account top nav
+
+
+.droalphx5wx5stainer {
+  border-radius: 4px;
+  overflow: hidden;
+  width: 100%;
+display: flex;
+flex-direction: column;
+gap: 10px;
+user-select: none;
+  .dropalphx5wx5sem {
+    display: flex;
+        flex-direction: column;
+        gap: 10px;
+        background: $x1primary;
+        padding: 10px 0;
+        // border-radius: 10px;
+        width: 100%;
+        cursor: pointer;
+        &:hover {
+          background: $x3primary;
+          background: transparent;
+        }
+
+        h2 {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          font-weight: 600;
+          font-size: 16px;
+          color: $wtext;
+          padding: 0 10px;
+          svg {
+            height: 25px;
+            width:  25px;
+          }
+        }
+
+    .dropdowalphx5wx5snt {
+      padding: 10px 0;
+      margin-left: 30px;
+      .alphx5sopdownmenu {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        
+        
+      }
+      a {
+        display: block;
+        border-radius: 5px 0 0 5px;
+        color: $wtext;
+        background: $x1primary;
+        text-decoration: none;
+        padding: 8px 10px;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
