--- a/src/Components/VoiceINput/voiceinputskxsw.scss
+++ b/src/Components/VoiceINput/voiceinputskxsw.scss
@@ -1,10 +1,14 @@
 @use "../../scss/" as *;
 
 .sdc45wer5wesr5esd {
-  margin: 40px 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 15px 15px;
+  background: $background_black;
   .mic-button {
     img {
-      height: 35px;
+      height: 30px;
     }
   }
 
