--- a/src/Views/Account/account.scss
+++ b/src/Views/Account/account.scss
@@ -70,15 +70,7 @@
   gap: 5px;
   justify-content: space-between;
 
-  background: #7f919e55;
-  background: -webkit-linear-gradient(to right, #7f919e55, #4053674f);
-  background: linear-gradient(to right, #7f919e55, #4053674f);
-
-  background: rgba(127, 145, 158, 0.3333333333);
-  background: -webkit-linear-gradient(to right, rgba(127, 145, 158, 0.3333333333), rgba(64, 83, 103, 0.3098039216));
-  background: linear-gradient(to right, rgba(127, 145, 158, 0.486), rgba(64, 83, 103, 0.521));
-
-
+background: $x1primary;
 
 
 
@@ -91,7 +83,8 @@
   @include mobile {
     flex-direction: column;
     align-items: unset;
-    border-radius: 10px 10px 40px 10px;
+    padding: 5px 10px;
+    border-radius: 10px 10px 10px 10px;
   }
   #lfo1 {
     display: flex;
@@ -102,9 +95,7 @@
     svg {
       font-size: 35px;
       color: $white;
-      background: #7f919e;
-      background: -webkit-linear-gradient(to right, #7f919e, #405367);
-      background: linear-gradient(to right, #7f919e, #405367);
+      background: $x2primary;
       padding: 5px;
       border-radius: 20px;
     }
